Problem: routing emails to different repos using maildrop
It is unclear from the tests if this functionality
(being able to sort emails to different repositories based
on their content) works -- and if it does, how exactly
should it be operated

Solution: write a test covering existing functionality

To recap, in order to route an email to a different repo,
one needs to invoke `email-ingress <repo>`. For example,
in maildrop rules it'll look something like this:

```
if ( /^To: sit-inbox@inbox.sit.fyi/ )
{
  to "|email-ingress repo"
}
```

--- a/tests/fixtures/config.toml
+++ b/tests/fixtures/config.toml
@@ -2,11 +2,21 @@
 type = "git"
 source = "/repo.test"
 
+[repository.repo1]
+type = "git"
+source = "/repo1.test"
+
 [inbox.email]
 type = "email"
 retriever = "MailboxRetriever"
 path = "/inbox"
 default_repository = "repo"
+maildrop = """
+if ( /^From: test <special@test>/)
+{
+  to "|email-ingress repo1"
+}
+"""
 
 [inbox.mbox]
 type = "email"
