Problem: unattended operation
Currently, we will poll inboxes at a startup and upon user request in
the UI. However, if this is left unattended, nothing will happen, which
is not very useful.

Solution: allow configuring cron jobs for fetching updates
(`cron` option)

--- a/playbook/playbook.yml
+++ b/playbook/playbook.yml
@@ -41,6 +41,16 @@
                     job: "getmail.{{ item.key }} 2>&1 | logger -t getmail.{{ item.key }}"
             loop: "{{ inbox | dict2items }}"
             when: item.value.type == "email" and (item.value.autostart | default(true))
+          - name: periodic getmail
+            cron:
+                    name: "get email for {{ item.key }} periodically"
+                    minute: "{{ (item.value.cron | default('* * * * *')).split(' ')[0] }}"
+                    hour: "{{ (item.value.cron | default('* * * * *')).split(' ')[1] }}"
+                    day: "{{ (item.value.cron | default('* * * * *')).split(' ')[2] }}"
+                    month: "{{ (item.value.cron | default('* * * * *')).split(' ')[3] }}"
+                    weekday: "{{ (item.value.cron | default('* * * * *')).split(' ')[4] }}"
+                    job: "getmail.{{ item.key }} 2>&1 | logger -t getmail.{{ item.key }}"
+            loop: "{{ inbox | dict2items }}"
           - name: check-email script
             template:
                     src: templates/check-email.j2
