Problem: lack of feedback
Currently, once somebody sends a patch over email, they will never hear
back. They can, of course, monitor the master repository to see if their
patch has appeared -- but this won't provide active feedback nor will it
indicate if there's any problem with their patch if it was rejected.

Solution: send an email back with the update on what happened to the patch

--- a/playbook/playbook.yml
+++ b/playbook/playbook.yml
@@ -92,3 +92,8 @@
                     mode: 0700
             loop: "{{ repository | dict2items }}"
             when: item.value.type == "git"
+          - name: msmtp configuration
+            template:
+                    src: templates/msmtprc.j2
+                    dest: "/root/.msmtprc"
+                    mode: 0600
