Problem: inboxing for a branch
There is no way to be sure sit-inbox will handle branches in target
repositories well.

Solution: write a minimal test

--- a/tests/fixtures/config.toml
+++ b/tests/fixtures/config.toml
@@ -5,6 +5,14 @@ email_response = true
 email_from = "sit@inbox"
 paths = ".sit subrepos/*/.sit ."
 
+[target.repo-branch]
+type = "git"
+source = "/repo.test"
+branch = "test-branch"
+email_response = true
+email_from = "sit@inbox"
+paths = ".sit subrepos/*/.sit ."
+
 [target.repo1]
 type = "git"
 source = "/repo1.test"
